# RISC-V-Simulator

./: CMakeLists.txt  README.md  main.cpp  test.cpp
src/: ALU.cpp  ALU.h  BranchPredictor.cpp  BranchPredictor.h  CPU.cpp  CPU.h  Clock.cpp  Clock.h  Decoder.cpp  Decoder.h  InstructionUnit.cpp  InstructionUnit.h  LoadStoreBuffer.cpp  LoadStoreBuffer.h  Memory.cpp  Memory.h  RegisterFile.cpp  RegisterFile.h  ReorderBuffer.cpp  ReorderBuffer.h  ReservationStation.cpp  ReservationStation.h  TypeDef.cpp  TypeDef.h  WriteController.h  config.cpp  config.h
src/utils/: CircularQueue.h  NumberOperation.h  Register.h  WriteController.cpp  WriteController.h
